Refactoring jeography.core package
Moved most of the classes from the jeography.core package to a new
package jeography.tiles with subpackages cache, manager and source.