@@ -15,12 +15,12 @@
 // You should have received a copy of the GNU Lesser General Public License
 // along with jeography. If not, see <http://www.gnu.org/licenses/>.
 
-package de.topobyte.jeography.core;
+package de.topobyte.jeography.tiles.cache;
 
+import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
-
-import de.topobyte.adt.misc.uniquedeque.UniqueLinkedList;
 
 /**
  * @param <K>
@@ -30,12 +30,12 @@ import de.topobyte.adt.misc.uniquedeque.UniqueLinkedList;
  * 
  * @author Sebastian Kuerten (sebastian@topobyte.de)
  */
-public class MemoryCachePlus<K, V>
+public class MemoryCache<K, V>
 {
 
-	private int size;
-	private UniqueLinkedList<K> keys = new UniqueLinkedList<>();
+	private int size = 20;
 	private Map<K, V> map = new HashMap<>();
+	private List<K> keys = new ArrayList<>();
 
 	/**
 	 * Create a memory cache.
@@ -43,7 +43,7 @@ public class MemoryCachePlus<K, V>
 	 * @param size
 	 *            the number of elements to store.
 	 */
-	public MemoryCachePlus(int size)
+	public MemoryCache(int size)
 	{
 		this.size = size;
 	}
@@ -57,7 +57,7 @@ public class MemoryCachePlus<K, V>
 	{
 		this.size = size;
 		while (keys.size() > size) {
-			K removed = keys.removeLast();
+			K removed = keys.remove(0);
 			map.remove(removed);
 		}
 	}
@@ -69,22 +69,21 @@ public class MemoryCachePlus<K, V>
 	 *            the key.
 	 * @param value
 	 *            the value.
-	 * @return the key removed or null
 	 */
-	public synchronized K put(K key, V value)
+	public synchronized void put(K key, V value)
 	{
 		if (map.containsKey(key)) {
+			// replace...
 			map.put(key, value);
+			// TODO: rearrange in queue
 		} else {
 			map.put(key, value);
-			keys.addFirst(key);
+			keys.add(key);
 			if (keys.size() > size) {
-				K removed = keys.removeLast();
+				K removed = keys.remove(0);
 				map.remove(removed);
-				return removed;
 			}
 		}
-		return null;
 	}
 
 	/**
@@ -114,20 +113,6 @@ public class MemoryCachePlus<K, V>
 			return map.remove(key);
 		}
 		return null;
-	}
-
-	/**
-	 * Reorder the key within the replacement list.
-	 * 
-	 * @param key
-	 *            the key to reorder.
-	 */
-	public synchronized void refresh(K key)
-	{
-		if (!map.containsKey(key)) {
-			return;
-		}
-		keys.moveToFront(key);
 	}
 
 	/**
